Crashing on startup if configured cursor theme was removed
Affected version
3.36.6 Archlinux up to date. Using wayland.
Bug summary
Mutter crashed
Steps to reproduce
It crashes all the time. I can't log in.
What happened
20-09-18 13:57:43 abique@foret-argentee:~> coredumpctl gdb
PID: 20250 (gnome-shell)
UID: 1000 (abique)
GID: 1000 (abique)
Signal: 5 (TRAP)
Timestamp: Fri 2020-09-18 13:38:24 CEST (19min ago)
Command Line: /usr/bin/gnome-shell
Executable: /usr/bin/gnome-shell
Control Group: /user.slice/user-1000.slice/user@1000.service/gnome-shell-wayland.service
Unit: user@1000.service
User Unit: gnome-shell-wayland.service
Slice: user-1000.slice
Owner UID: 1000 (abique)
Boot ID: 4cc108a1ceb8478692b38ced24584cf8
Machine ID: a7e849d9ab3b47c9bfc4052d453ad595
Hostname: foret-argentee
Storage: /var/lib/systemd/coredump/core.gnome-shell.1000.4cc108a1ceb8478692b38ced24584cf8.20250.1600429104000000.zst
Message: Process 20250 (gnome-shell) of user 1000 dumped core.
Stack trace of thread 20250:
#0 0x00007fcfe74d4615 raise (libc.so.6 + 0x3d615)
#1 0x0000563e5195dad9 n/a (gnome-shell + 0x2ad9)
#2 0x00007fcfe74d46a0 __restore_rt (libc.so.6 + 0x3d6a0)
#3 0x00007fcfe832c4e8 g_log_structured_array (libglib-2.0.so.0 + 0x594e8)
#4 0x00007fcfe832cb06 g_log_default_handler (libglib-2.0.so.0 + 0x59b06)
#5 0x0000563e5195d8dc n/a (gnome-shell + 0x28dc)
#6 0x00007fcfe832def9 g_logv (libglib-2.0.so.0 + 0x5aef9)
#7 0x00007fcfe832e1a0 g_log (libglib-2.0.so.0 + 0x5b1a0)
#8 0x00007fcfe76b83e8 n/a (libmutter-6.so.0 + 0x563e8)
#9 0x00007fcfe77c13c8 n/a (libmutter-6.so.0 + 0x15f3c8)
#10 0x00007fcfe76b78d0 n/a (libmutter-6.so.0 + 0x558d0)
#11 0x00007fcfe76b853d n/a (libmutter-6.so.0 + 0x5653d)
#12 0x00007fcfe770e784 n/a (libmutter-6.so.0 + 0xac784)
#13 0x00007fcfe772900c meta_run (libmutter-6.so.0 + 0xc700c)
#14 0x0000563e5195d417 n/a (gnome-shell + 0x2417)
#15 0x00007fcfe74bf152 __libc_start_main (libc.so.6 + 0x28152)
#16 0x0000563e5195d60e n/a (gnome-shell + 0x260e)
Stack trace of thread 20255:
#0 0x00007fcfe758c46f __poll (libc.so.6 + 0xf546f)
#1 0x00007fcfe8377188 n/a (libglib-2.0.so.0 + 0xa4188)
#2 0x00007fcfe8324421 g_main_context_iteration (libglib-2.0.so.0 + 0x51421)
#3 0x00007fcfe8644c0e n/a (libdconfsettings.so + 0x5c0e)
#4 0x00007fcfe8352a91 n/a (libglib-2.0.so.0 + 0x7fa91)
#5 0x00007fcfe69683e9 start_thread (libpthread.so.0 + 0x93e9)
#6 0x00007fcfe7597293 __clone (libc.so.6 + 0x100293)
Stack trace of thread 20282:
#0 0x00007fcfe696e6a2 pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0 + 0xf6a2)
#1 0x00007fcfe5436a2d _ZN7mozilla6detail21ConditionVariableImpl8wait_forERNS0_9MutexImplERKNS_16BaseTimeDurationINS_27TimeDurationValueCalculatorEEE (libmozjs-68.so + 0x9daa2d)
#2 0x00007fcfe4ccb5c8 n/a (libmozjs-68.so + 0x26f5c8)
#3 0x00007fcfe4cdb0ba n/a (libmozjs-68.so + 0x27f0ba)
#4 0x00007fcfe69683e9 start_thread (libpthread.so.0 + 0x93e9)
#5 0x00007fcfe7597293 __clone (libc.so.6 + 0x100293)
Stack trace of thread 20253:
#0 0x00007fcfe7591d5d syscall (libc.so.6 + 0xfad5d)
#1 0x00007fcfe83730cb g_cond_wait_until (libglib-2.0.so.0 + 0xa00cb)
#2 0x00007fcfe82f5833 n/a (libglib-2.0.so.0 + 0x22833)
#3 0x00007fcfe835576b n/a (libglib-2.0.so.0 + 0x8276b)
#4 0x00007fcfe8352a91 n/a (libglib-2.0.so.0 + 0x7fa91)
#5 0x00007fcfe69683e9 start_thread (libpthread.so.0 + 0x93e9)
#6 0x00007fcfe7597293 __clone (libc.so.6 + 0x100293)
Stack trace of thread 20252:
#0 0x00007fcfe758c46f __poll (libc.so.6 + 0xf546f)
#1 0x00007fcfe8377188 n/a (libglib-2.0.so.0 + 0xa4188)
#2 0x00007fcfe8324421 g_main_context_iteration (libglib-2.0.so.0 + 0x51421)
#3 0x00007fcfe8324472 n/a (libglib-2.0.so.0 + 0x51472)
#4 0x00007fcfe8352a91 n/a (libglib-2.0.so.0 + 0x7fa91)
#5 0x00007fcfe69683e9 start_thread (libpthread.so.0 + 0x93e9)
#6 0x00007fcfe7597293 __clone (libc.so.6 + 0x100293)
Stack trace of thread 20279:
#0 0x00007fcfe696e6a2 pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0 + 0xf6a2)
#1 0x00007fcfe5436a2d _ZN7mozilla6detail21ConditionVariableImpl8wait_forERNS0_9MutexImplERKNS_16BaseTimeDurationINS_27TimeDurationValueCalculatorEEE (libmozjs-68.so + 0x9daa2d)
#2 0x00007fcfe4ccb5c8 n/a (libmozjs-68.so + 0x26f5c8)
#3 0x00007fcfe4cdb0ba n/a (libmozjs-68.so + 0x27f0ba)
#4 0x00007fcfe69683e9 start_thread (libpthread.so.0 + 0x93e9)
#5 0x00007fcfe7597293 __clone (libc.so.6 + 0x100293)
Stack trace of thread 20284:
#0 0x00007fcfe696e6a2 pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0 + 0xf6a2)
#1 0x00007fcfe5436a2d _ZN7mozilla6detail21ConditionVariableImpl8wait_forERNS0_9MutexImplERKNS_16BaseTimeDurationINS_27TimeDurationValueCalculatorEEE (libmozjs-68.so + 0x9daa2d)
#2 0x00007fcfe4ccb5c8 n/a (libmozjs-68.so + 0x26f5c8)
#3 0x00007fcfe4cdb0ba n/a (libmozjs-68.so + 0x27f0ba)
#4 0x00007fcfe69683e9 start_thread (libpthread.so.0 + 0x93e9)
#5 0x00007fcfe7597293 __clone (libc.so.6 + 0x100293)
Stack trace of thread 20263:
#0 0x00007fcfe696e6a2 pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0 + 0xf6a2)
#1 0x00007fcfd2d43e3c n/a (iris_dri.so + 0x4b0e3c)
#2 0x00007fcfd2d42838 n/a (iris_dri.so + 0x4af838)
#3 0x00007fcfe69683e9 start_thread (libpthread.so.0 + 0x93e9)
#4 0x00007fcfe7597293 __clone (libc.so.6 + 0x100293)
Stack trace of thread 20280:
#0 0x00007fcfe696e6a2 pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0 + 0xf6a2)
#1 0x00007fcfe5436a2d _ZN7mozilla6detail21ConditionVariableImpl8wait_forERNS0_9MutexImplERKNS_16BaseTimeDurationINS_27TimeDurationValueCalculatorEEE (libmozjs-68.so + 0x9daa2d)
#2 0x00007fcfe4ccb5c8 n/a (libmozjs-68.so + 0x26f5c8)
#3 0x00007fcfe4cdb0ba n/a (libmozjs-68.so + 0x27f0ba)
#4 0x00007fcfe69683e9 start_thread (libpthread.so.0 + 0x93e9)
#5 0x00007fcfe7597293 __clone (libc.so.6 + 0x100293)
Stack trace of thread 20278:
#0 0x00007fcfe696e6a2 pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0 + 0xf6a2)
#1 0x00007fcfe5436a2d _ZN7mozilla6detail21ConditionVariableImpl8wait_forERNS0_9MutexImplERKNS_16BaseTimeDurationINS_27TimeDurationValueCalculatorEEE (libmozjs-68.so + 0x9daa2d)
#2 0x00007fcfe4ccb5c8 n/a (libmozjs-68.so + 0x26f5c8)
#3 0x00007fcfe4cdb0ba n/a (libmozjs-68.so + 0x27f0ba)
#4 0x00007fcfe69683e9 start_thread (libpthread.so.0 + 0x93e9)
#5 0x00007fcfe7597293 __clone (libc.so.6 + 0x100293)
Stack trace of thread 20285:
#0 0x00007fcfe696e6a2 pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0 + 0xf6a2)
#1 0x00007fcfe5436a2d _ZN7mozilla6detail21ConditionVariableImpl8wait_forERNS0_9MutexImplERKNS_16BaseTimeDurationINS_27TimeDurationValueCalculatorEEE (libmozjs-68.so + 0x9daa2d)
#2 0x00007fcfe4ccb5c8 n/a (libmozjs-68.so + 0x26f5c8)
#3 0x00007fcfe4cdb0ba n/a (libmozjs-68.so + 0x27f0ba)
#4 0x00007fcfe69683e9 start_thread (libpthread.so.0 + 0x93e9)
#5 0x00007fcfe7597293 __clone (libc.so.6 + 0x100293)
Stack trace of thread 20260:
#0 0x00007fcfe696e6a2 pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0 + 0xf6a2)
#1 0x00007fcfd2d43e3c n/a (iris_dri.so + 0x4b0e3c)
#2 0x00007fcfd2d42838 n/a (iris_dri.so + 0x4af838)
#3 0x00007fcfe69683e9 start_thread (libpthread.so.0 + 0x93e9)
#4 0x00007fcfe7597293 __clone (libc.so.6 + 0x100293)
Stack trace of thread 20254:
#0 0x00007fcfe758c46f __poll (libc.so.6 + 0xf546f)
#1 0x00007fcfe8377188 n/a (libglib-2.0.so.0 + 0xa4188)
#2 0x00007fcfe8325163 g_main_loop_run (libglib-2.0.so.0 + 0x52163)
#3 0x00007fcfe855cfe8 n/a (libgio-2.0.so.0 + 0x101fe8)
#4 0x00007fcfe8352a91 n/a (libglib-2.0.so.0 + 0x7fa91)
#5 0x00007fcfe69683e9 start_thread (libpthread.so.0 + 0x93e9)
#6 0x00007fcfe7597293 __clone (libc.so.6 + 0x100293)
Stack trace of thread 20261:
#0 0x00007fcfe696e6a2 pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0 + 0xf6a2)
#1 0x00007fcfd2d43e3c n/a (iris_dri.so + 0x4b0e3c)
#2 0x00007fcfd2d42838 n/a (iris_dri.so + 0x4af838)
#3 0x00007fcfe69683e9 start_thread (libpthread.so.0 + 0x93e9)
#4 0x00007fcfe7597293 __clone (libc.so.6 + 0x100293)
Stack trace of thread 20283:
#0 0x00007fcfe696e6a2 pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0 + 0xf6a2)
#1 0x00007fcfe5436a2d _ZN7mozilla6detail21ConditionVariableImpl8wait_forERNS0_9MutexImplERKNS_16BaseTimeDurationINS_27TimeDurationValueCalculatorEEE (libmozjs-68.so + 0x9daa2d)
#2 0x00007fcfe4ccb5c8 n/a (libmozjs-68.so + 0x26f5c8)
#3 0x00007fcfe4cdb0ba n/a (libmozjs-68.so + 0x27f0ba)
#4 0x00007fcfe69683e9 start_thread (libpthread.so.0 + 0x93e9)
#5 0x00007fcfe7597293 __clone (libc.so.6 + 0x100293)
Stack trace of thread 20262:
#0 0x00007fcfe696e6a2 pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0 + 0xf6a2)
#1 0x00007fcfd2d43e3c n/a (iris_dri.so + 0x4b0e3c)
#2 0x00007fcfd2d42838 n/a (iris_dri.so + 0x4af838)
#3 0x00007fcfe69683e9 start_thread (libpthread.so.0 + 0x93e9)
#4 0x00007fcfe7597293 __clone (libc.so.6 + 0x100293)
Stack trace of thread 20281:
#0 0x00007fcfe696e6a2 pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0 + 0xf6a2)
#1 0x00007fcfe5436a2d _ZN7mozilla6detail21ConditionVariableImpl8wait_forERNS0_9MutexImplERKNS_16BaseTimeDurationINS_27TimeDurationValueCalculatorEEE (libmozjs-68.so + 0x9daa2d)
#2 0x00007fcfe4ccb5c8 n/a (libmozjs-68.so + 0x26f5c8)
#3 0x00007fcfe4cdb0ba n/a (libmozjs-68.so + 0x27f0ba)
#4 0x00007fcfe69683e9 start_thread (libpthread.so.0 + 0x93e9)
#5 0x00007fcfe7597293 __clone (libc.so.6 + 0x100293)
GNU gdb (GDB) 9.2
Copyright (C) 2020 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.
Type "show copying" and "show warranty" for details.
This GDB was configured as "x86_64-pc-linux-gnu".
Type "show configuration" for configuration details.
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>.
Find the GDB manual and other documentation resources online at:
<http://www.gnu.org/software/gdb/documentation/>.
For help, type "help".
Type "apropos word" to search for commands related to "word"...
Reading symbols from /usr/bin/gnome-shell...
(No debugging symbols found in /usr/bin/gnome-shell)
[New LWP 20250]
[New LWP 20255]
[New LWP 20282]
[New LWP 20253]
[New LWP 20252]
[New LWP 20279]
[New LWP 20284]
[New LWP 20263]
[New LWP 20280]
[New LWP 20278]
[New LWP 20285]
[New LWP 20260]
[New LWP 20254]
[New LWP 20261]
[New LWP 20283]
[New LWP 20262]
[New LWP 20281]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/usr/lib/libthread_db.so.1".
Core was generated by `/usr/bin/gnome-shell'.
Program terminated with signal SIGTRAP, Trace/breakpoint trap.
#0 0x00007fcfe74d4615 in raise () from /usr/lib/libc.so.6
[Current thread is 1 (Thread 0x7fcfe3930c00 (LWP 20250))]
Edited by Jonas Ådahl